Added an api to fetch caretaker records by serviceID